@@ -1,3 +1,6 @@
+- partitioning wizard: allow "Use free space" if there is an extended
+  partition even if all primary partitions are used (#38804)
+  (*old* bug!)
 - fix errors while setting PA preferences (#39270)
 - use umask=0 by default on vfat (#39315)
 - root/user password:
