@@ -1,3 +1,8 @@
+- partitioning wizard lirary: 
+  o allow "Use free space" if there is an extended
+  partition even if all primary partitions are used (#38804)
+  (*old* bug!)
+
 Version 10.20 - 25 March 2008
 
 - do not run main_quit if not in a main loop (eg: while loading GUI)
